--- a/pom.xml
+++ b/pom.xml
@@ -101,6 +101,12 @@
           <artifactId>opencsv</artifactId>
           <version>5.7.1</version>
       </dependency>
+      <dependency>
+          <groupId>junit</groupId>
+          <artifactId>junit</artifactId>
+          <version>4.13.1</version>
+          <scope>compile</scope>
+      </dependency>
       <!--<dependency>
           <groupId>com.oracle.casb.dp.seclore</groupId>
           <artifactId>UserRightService</artifactId>
