--- a/pom.xml
+++ b/pom.xml
@@ -107,6 +107,12 @@
           <version>4.13.1</version>
           <scope>compile</scope>
       </dependency>
+      <dependency>
+          <groupId>org.junit.jupiter</groupId>
+          <artifactId>junit-jupiter</artifactId>
+          <version>RELEASE</version>
+          <scope>test</scope>
+      </dependency>
       <!--<dependency>
           <groupId>com.oracle.casb.dp.seclore</groupId>
           <artifactId>UserRightService</artifactId>
